# tiralabra

./: .coveragerc  .pylintrc  README.md  pyproject.toml
docs/: implementation_document.md  maarittelydokumentti.md  test_document.md  testausdokumentti.md  testausraportti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: main.py
src/models/: neural_network.py
src/scripts/: evaluate.py  train.py
src/tests/: test_activation_functions.py  test_end_to_end.py  test_neural_network.py  test_utils.py
src/utils/: activation_functions.py  data_loader.py  mnist_reader.py  training.py
