[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["KasperiBlomberg <blomberg.kasperi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
pyqt6 = "^6.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pylint = "^3.3.4"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
